move blog to ipynb

--- a/Tn格点上逾渗的几何结构.ipynb
+++ b/Tn格点上逾渗的几何结构.ipynb
@@ -4,33 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 测试nbviewer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%pylab\n",
-    "%matplotlib inline\n",
-    "%config InlineBackend.figure_format = 'svg'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x=linspace(-1,1,100)\n",
-    "y=tanh(x)\n",
-    "plot(x,y,'r-')"
+    "《$T_n$格点上逾渗的几何结构》是我的本科毕业论文。\n",
+    "\n",
+    "+ 论文[下载地址](https://bitbucket.org/zpj/bachelor-thesis/downloads/thesis.pdf)\n",
+    "+ 幻灯片[下载地址](https://bitbucket.org/zpj/bachelor-thesis/downloads/slide.pdf)，待上传\n",
+    "\n",
+    "具体算法原理等请参考论文。以及章彦博写的[算法原理](http://zhangyanbo.leanote.com/post/%E7%AE%97%E6%B3%95%E8%AF%B4%E6%98%8E)\n",
+    "\n"
    ]
   },
   {
