--- a/配置git.ipynb
+++ b/配置git.ipynb
@@ -4,33 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 测试nbviewer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%pylab\n",
-    "%matplotlib inline\n",
-    "%config InlineBackend.figure_format = 'svg'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x=linspace(-1,1,100)\n",
-    "y=tanh(x)\n",
-    "plot(x,y,'r-')"
+    "## 配置基本信息\n",
+    "```bash\n",
+    "git config --global user.name \"Peijun Zhu\"\n",
+    "git config --global user.email \"zpj.ustc@gmail.com\"\n",
+    "```\n",
+    "## 生成/添加ssh-key\n",
+    "```bash\n",
+    "ssh-keygen -t rsa -b 4096 -C \"zpj.ustc@gmail.com\"\n",
+    "cat id_rsa.pub\n",
+    "```\n",
+    "再把生成的内容贴入Github/Bitbucket等托管网站\n",
+    "## 全局`.gitignore`"
    ]
   },
   {
