--- a/Homework/polarized_light.ipynb
+++ b/Homework/polarized_light.ipynb
@@ -5,14 +5,18 @@
    "metadata": {},
    "source": [
     "# 线偏振光合成\n",
-    "考虑 $$x=\\cos t, y=A\\cos t+B\\sin t\\quad\\Rightarrow\\quad B\\sin t=(y-Ax)$$"
+    "考虑 $$x=\\cos t, y=A\\cos t+B\\sin t$$\n",
+    "\n",
+    "容易得出$$B\\sin t=(y-Ax)$$\n",
+    "\n",
+    "因此有$$B^2x^2+(y-Ax)^2=B^2$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$B^2x^2+(y-Ax)^2=B^2\\Leftrightarrow (A^2+B^2)x^2-2Axy+y^2=B^2\\Leftrightarrow \\mathbf{x}^T\\begin{bmatrix}A^2+B^2& -A\\\\-A&1\\end{bmatrix}\\mathbf{x}=B^2$$\n",
+    "展开$$(A^2+B^2)x^2-2Axy+y^2=B^2\\Leftrightarrow \\mathbf{x}^T\\begin{bmatrix}A^2+B^2& -A\\\\-A&1\\end{bmatrix}\\mathbf{x}=B^2$$\n",
     "\n",
     "$$1+A^2>0, \\det\\left(\\begin{bmatrix}1+A^2& -A\\\\-A&1\\end{bmatrix}\\right)>0$$\n",
     "二次型矩阵是正定的，所以是个椭圆"
