--- a/Homework/polarized_light.ipynb
+++ b/Homework/polarized_light.ipynb
@@ -16,10 +16,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "展开$$(A^2+B^2)x^2-2Axy+y^2=B^2\\Leftrightarrow \\mathbf{x}^T\\begin{bmatrix}A^2+B^2& -A\\\\-A&1\\end{bmatrix}\\mathbf{x}=B^2$$\n",
+    "展开得到$$(A^2+B^2)x^2-2Axy+y^2=B^2$$亦即$$\\mathbf{x}^T\\begin{bmatrix}A^2+B^2& -A\\\\-A&1\\end{bmatrix}\\mathbf{x}=B^2$$其中$$\\mathbf{x}^T=(x\\;y)$$\n",
     "\n",
+    "显然二次型矩阵是正定的：\n",
     "$$1+A^2>0, \\det\\left(\\begin{bmatrix}1+A^2& -A\\\\-A&1\\end{bmatrix}\\right)>0$$\n",
-    "二次型矩阵是正定的，所以是个椭圆"
+    "所以是个椭圆"
    ]
   },
   {
