--- a/Homework/energy_density.tex
+++ b/Homework/energy_density.tex
@@ -1,14 +1,14 @@
 \documentclass{article}
 \usepackage{zpj}
 \title{Energy Density for Electrostatic Field}
-\author{Peijun Zhu}
+\author{P\`eij\`un Zh\=u}
 
 \begin{document}
 
 \maketitle
 \[E_\pm=\frac{kq_\pm}{r_\pm^3}\bm r_\pm,\quad \bm r_\pm=\bm r\pm a\hat z\]
 
-We want to prove \[\frac{kq_+q_-}{2a}=\int\epsilon \bm E_1\cdot \bm E_2\dd V=\frac{kq_+q_-}{4\pi}\int  \frac{\bm r_+\cdot \bm r_-}{r_+^3r_-^3} \dd V\]
+We want to prove \[\frac{kq_+q_-}{2a}=\int\epsilon \bm E_+\cdot \bm E_-\dd V=\frac{kq_+q_-}{4\pi}\int  \frac{\bm r_+\cdot \bm r_-}{r_+^3r_-^3} \dd V\]
 
 We choose $a=1$, so:
 \begin{align}
