--- a/Homework/polarized_light.ipynb
+++ b/Homework/polarized_light.ipynb
@@ -19,7 +19,7 @@
     "展开得到$$(A^2+B^2)x^2-2Axy+y^2=B^2$$亦即$$\\mathbf{x}^T\\begin{bmatrix}A^2+B^2& -A\\\\-A&1\\end{bmatrix}\\mathbf{x}=B^2$$其中$$\\mathbf{x}^T=(x\\;y)$$\n",
     "\n",
     "显然二次型矩阵是（半）正定的：\n",
-    "$$1+A^2>0, \\det\\left(\\begin{bmatrix}A^2+B^2& -A\\\\-A&1\\end{bmatrix}\\right)=B^2\\geq0$$\n",
+    "$$A^2+B^2>0, \\det\\left(\\begin{bmatrix}A^2+B^2& -A\\\\-A&1\\end{bmatrix}\\right)=B^2\\geq0$$\n",
     "所以如果$B\\neq0$是个椭圆，$B=0$对应是直线"
    ]
   },
