--- a/JS学习.ipynb
+++ b/JS学习.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "## 基本知识\n",
-    "+ 获取元素的方法`demo=document.getElementById('demo')`\n",
+    "+ 获取元素的方法`demo=document.getElementById('demo')`还有`getElementsByTagName, getElementsByClassName`等\n",
     "+ 元素的内容`innerHTML`与属性`src`, `href`, `style`等\n",
     "+ `style.dislay='none'`可以隐藏元素，`block`可以显示隐藏的\n",
     "+ `<p id=\"demo\" style=\"display:none\">Hello JavaScript!</p>`键值对的方式设置`style`的子属性\n",
