--- a/Homework/Group_Velocity.ipynb
+++ b/Homework/Group_Velocity.ipynb
@@ -13,6 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For a perfect wavepacket to be stable, the $\\tilde A$ should be localized to a small area, so we can expand $k$ to the first order term of $\\Omega=\\omega-\\omega_0$ at $\\omega_0$.\n",
     "$$\n",
     "\\begin{align}\n",
     "r(x,t)&=\\int_{\\omega_0+\\Delta}^{\\omega_0-\\Delta}\\tilde A(\\omega)\\exp[i(k(\\omega)x-\\omega t)]d\\omega\\\\\n",
@@ -21,7 +22,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "So the real Amplitude\n",
+    "Here $A$ is propotional to the anti-Fourier Transformation of $\\tilde A$. So the real Amplitude of $r$ is\n",
     "$$A'(x,t)=\\left|A\\left(\\frac{\\mathrm{d}k}{\\mathrm{d}\\omega}x-t\\right)\\right|=A'(x-v_gt),\\quad v_g=\\frac{\\mathrm{d}\\omega}{\\mathrm{d}k}$$"
    ]
   },
