--- a/Homework/第二次作业.tex
+++ b/Homework/第二次作业.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{ctexart}
 \usepackage[left=1in, right=1in, top=1.5in, bottom=1.5in]{geometry}
 \usepackage{zpj}
 \usepackage{empheq}
