--- a/physics/dAlembert2Lagrange.tex
+++ b/physics/dAlembert2Lagrange.tex
@@ -30,6 +30,6 @@ For conservative force,
 \Rightarrow\quad Q=\left(\frac{\dd}{\dd t}\frac{\pp}{\pp\dot q}-\frac{\pp}{\pp q}\right)V\label{V}
 \end{equation}
 
-As a result of Eq. \ref{T} and \ref{V}, if we define $L=T-V$, we have
+As a result of Eq.~\ref{T} and \ref{V}, if we define $L=T-V$, we have
 \[\left(\frac{\dd}{\dd t}\frac{\pp}{\pp\dot q}-\frac{\pp}{\pp q}\right)L=0\]
 \end{document}
