--- a/physics/geomtr_optics.tex
+++ b/physics/geomtr_optics.tex
@@ -22,34 +22,38 @@ L=n\frac{\dd \ell}{\dd t}=n(\bm r)|\bm{\dot r}|
 then the Euler-Lagrange Equation is
 \begin{align}
 &\left(\frac{\dd}{\dd t}\frac{\pp}{\pp\bm{\dot r}}-\frac{\pp}{\pp\bm{r}}\right)L=0\\
-\bm p&=\frac{\pp L}{\pp \bm{\dot r}}=n \hat\theta,\quad\hat{\theta}=\frac{\pp |\dot{\bm r}|}{\pp \bm{\dot r}}=\bm{\dot r}/|\bm{\dot r}|\\
+\bm p&=\frac{\pp L}{\pp \bm{\dot r}}=n \hat\tau,\quad\hat{\tau}=\frac{\pp |\dot{\bm r}|}{\pp \bm{\dot r}}=\bm{\dot r}/|\bm{\dot r}|=\frac{\dd\bm r}{\dd\ell}\\
 \frac{\dd \bm p}{\dd t}&=\frac{\pp L}{\pp \bm{r}}=\frac{\dd\ell}{\dd t}\nabla n\\
-\frac{\dd \bm p}{\dd \ell}&=\nabla n
+\frac{\dd \bm p}{\dd \ell}&=\nabla n=\bm F
 \end{align}
+Generalized Momentum $\bm p$ is independent of the choice of $t$, and 
 %i.e. \begin{equation}
-%n\frac{\dd \hat\theta}{\dd \ell}=\nabla n-\hat{\theta}\frac{\dd n}{\dd \ell}=\left(1-\hat{\theta}\hat{\theta}^T\right)\nabla n=\nabla_\perp n\label{tt}
+%n\frac{\dd \hat\tau}{\dd \ell}=\nabla n-\hat{\tau}\frac{\dd n}{\dd \ell}=\left(1-\hat{\tau}\hat{\tau}^T\right)\nabla n=\nabla_\perp n\label{tt}
 %\end{equation}
 %also
 %\begin{equation}
-%\frac{\dd \hat\theta}{\dd \ell}=\nabla_\perp n/n=\nabla_\perp \ln n
+%\frac{\dd \hat\tau}{\dd \ell}=\nabla_\perp n/n=\nabla_\perp \ln n
 %\end{equation}
 \section{Examples}
-\subsection{Parallel Gradient}
+\subsection{Rectangular Coordinates}
 \begin{equation}
-	n(x,y,z)=f(x),\quad\nabla n=f'(x)\hat x
+	n(x,y,z)=f(x,y),\quad\bm F=\frac{\pp f}{\pp x}\hat x+\frac{\pp f}{\pp y}\hat y
 \end{equation}
-It is obvious that $p_y,p_z$ are conserved.
+It is obvious that $p_z$ are conserved.
 \subsection{Central Gradient}
-For a spherical symmetric distribution
-\begin{equation}
-n(\bm r)=f(r),\quad \nabla n=f'(r)\hat r
-\end{equation}
 Define $\bm L=\bm r\times \bm p$,
 \begin{align}
 	\frac{\dd \bm L}{\dd \ell}&=\frac{\dd\bm r}{\dd \ell}\times\bm p+\bm r\times\frac{\dd\bm p}{\dd \ell}
-	\\&=\hat{\theta}\times \bm p+\bm r\times\nabla n
-	\\&=\hat{\theta}\times n\hat{\theta}+\bm r\times f'(r)\hat r
-	\\&=0
+	\\&=\hat{\tau}\times \bm p+\bm r\times\bm F
+	\\&=\bm r\times\bm F
 \end{align}
-So $\bm L$ is conserved.
+$\bm L$ is conserved for a spherical symmetric distribution
+\begin{equation}
+n(\bm r)=f(r),\quad \bm r\times\bm F=\bm 0
+\end{equation}
+$L_z$ is conserved for 
+\begin{equation}
+n(\bm r)=f(r,\theta),\quad (\bm r\times\bm F)_z=0
+\end{equation}
+
 \end{document}
