--- a/computer/Python画图无穷间断点处理.ipynb
+++ b/computer/Python画图无穷间断点处理.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -39,10 +39,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fad4bd71f28>]"
+       "[<matplotlib.lines.Line2D at 0x7f56aeaca898>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -78,7 +78,7 @@
        "\" style=\"fill:#ffffff;\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_1\">\n",
-       "    <path clip-path=\"url(#p480855d225)\" d=\"M 25.942188 123.639062 \n",
+       "    <path clip-path=\"url(#p7a57e79bc2)\" d=\"M 25.942188 123.639062 \n",
        "L 31.952503 118.863394 \n",
        "L 35.70895 115.590124 \n",
        "L 38.714108 112.639053 \n",
@@ -255,21 +255,21 @@
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 25.942188 235.239062 \n",
-       "L 360.742188 235.239062 \n",
-       "\" style=\"fill:none;stroke:#000000;stroke-linecap:square;stroke-linejoin:miter;\"/>\n",
-       "   </g>\n",
-       "   <g id=\"patch_4\">\n",
-       "    <path d=\"M 25.942188 235.239062 \n",
        "L 25.942188 12.039062 \n",
        "\" style=\"fill:none;stroke:#000000;stroke-linecap:square;stroke-linejoin:miter;\"/>\n",
        "   </g>\n",
-       "   <g id=\"patch_5\">\n",
-       "    <path d=\"M 360.742188 235.239062 \n",
+       "   <g id=\"patch_4\">\n",
+       "    <path d=\"M 25.942188 12.039062 \n",
        "L 360.742188 12.039062 \n",
        "\" style=\"fill:none;stroke:#000000;stroke-linecap:square;stroke-linejoin:miter;\"/>\n",
        "   </g>\n",
+       "   <g id=\"patch_5\">\n",
+       "    <path d=\"M 25.942188 235.239062 \n",
+       "L 360.742188 235.239062 \n",
+       "\" style=\"fill:none;stroke:#000000;stroke-linecap:square;stroke-linejoin:miter;\"/>\n",
+       "   </g>\n",
        "   <g id=\"patch_6\">\n",
-       "    <path d=\"M 25.942188 12.039062 \n",
+       "    <path d=\"M 360.742188 235.239062 \n",
        "L 360.742188 12.039062 \n",
        "\" style=\"fill:none;stroke:#000000;stroke-linecap:square;stroke-linejoin:miter;\"/>\n",
        "   </g>\n",
@@ -279,20 +279,20 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 -4 \n",
-       "\" id=\"mca0c16a13a\" style=\"stroke:#000000;stroke-width:0.5;\"/>\n",
+       "\" id=\"me0810ad8f3\" style=\"stroke:#000000;stroke-width:0.5;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#mca0c16a13a\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#me0810ad8f3\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_3\">\n",
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 4 \n",
-       "\" id=\"mcaa9e91d05\" style=\"stroke:#000000;stroke-width:0.5;\"/>\n",
+       "\" id=\"m2c0efbd150\" style=\"stroke:#000000;stroke-width:0.5;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#mcaa9e91d05\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m2c0efbd150\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -326,12 +326,12 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"73.7707589286\" xlink:href=\"#mca0c16a13a\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"73.7707589286\" xlink:href=\"#me0810ad8f3\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"73.7707589286\" xlink:href=\"#mcaa9e91d05\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"73.7707589286\" xlink:href=\"#m2c0efbd150\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -369,12 +369,12 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"121.599330357\" xlink:href=\"#mca0c16a13a\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"121.599330357\" xlink:href=\"#me0810ad8f3\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"121.599330357\" xlink:href=\"#mcaa9e91d05\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"121.599330357\" xlink:href=\"#m2c0efbd150\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -406,12 +406,12 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"169.427901786\" xlink:href=\"#mca0c16a13a\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"169.427901786\" xlink:href=\"#me0810ad8f3\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"169.427901786\" xlink:href=\"#mcaa9e91d05\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"169.427901786\" xlink:href=\"#m2c0efbd150\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -454,12 +454,12 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"217.256473214\" xlink:href=\"#mca0c16a13a\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"217.256473214\" xlink:href=\"#me0810ad8f3\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"217.256473214\" xlink:href=\"#mcaa9e91d05\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"217.256473214\" xlink:href=\"#m2c0efbd150\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -510,12 +510,12 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"265.085044643\" xlink:href=\"#mca0c16a13a\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"265.085044643\" xlink:href=\"#me0810ad8f3\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_13\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"265.085044643\" xlink:href=\"#mcaa9e91d05\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"265.085044643\" xlink:href=\"#m2c0efbd150\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -544,12 +544,12 @@
        "    <g id=\"xtick_7\">\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"312.913616071\" xlink:href=\"#mca0c16a13a\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"312.913616071\" xlink:href=\"#me0810ad8f3\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_15\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"312.913616071\" xlink:href=\"#mcaa9e91d05\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"312.913616071\" xlink:href=\"#m2c0efbd150\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -563,12 +563,12 @@
        "    <g id=\"xtick_8\">\n",
        "     <g id=\"line2d_16\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mca0c16a13a\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#me0810ad8f3\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_17\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mcaa9e91d05\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#m2c0efbd150\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -586,20 +586,20 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 4 0 \n",
-       "\" id=\"m7ea3143e55\" style=\"stroke:#000000;stroke-width:0.5;\"/>\n",
+       "\" id=\"m81a53f40de\" style=\"stroke:#000000;stroke-width:0.5;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m7ea3143e55\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m81a53f40de\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_19\">\n",
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -4 0 \n",
-       "\" id=\"mcc0619f93f\" style=\"stroke:#000000;stroke-width:0.5;\"/>\n",
+       "\" id=\"m775907e8a8\" style=\"stroke:#000000;stroke-width:0.5;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mcc0619f93f\" y=\"235.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#m775907e8a8\" y=\"235.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -621,12 +621,12 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_20\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m7ea3143e55\" y=\"198.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m81a53f40de\" y=\"198.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_21\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mcc0619f93f\" y=\"198.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#m775907e8a8\" y=\"198.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -640,12 +640,12 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_22\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m7ea3143e55\" y=\"160.8390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m81a53f40de\" y=\"160.8390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_23\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mcc0619f93f\" y=\"160.8390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#m775907e8a8\" y=\"160.8390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -659,12 +659,12 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_24\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m7ea3143e55\" y=\"123.6390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m81a53f40de\" y=\"123.6390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_25\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mcc0619f93f\" y=\"123.6390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#m775907e8a8\" y=\"123.6390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -677,12 +677,12 @@
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_26\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m7ea3143e55\" y=\"86.4390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m81a53f40de\" y=\"86.4390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_27\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mcc0619f93f\" y=\"86.4390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#m775907e8a8\" y=\"86.4390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -695,12 +695,12 @@
        "    <g id=\"ytick_6\">\n",
        "     <g id=\"line2d_28\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m7ea3143e55\" y=\"49.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m81a53f40de\" y=\"49.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_29\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mcc0619f93f\" y=\"49.2390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#m775907e8a8\" y=\"49.2390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_14\">\n",
@@ -713,12 +713,12 @@
        "    <g id=\"ytick_7\">\n",
        "     <g id=\"line2d_30\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m7ea3143e55\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"25.9421875\" xlink:href=\"#m81a53f40de\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"line2d_31\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#mcc0619f93f\" y=\"12.0390625\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.5;\" x=\"360.7421875\" xlink:href=\"#m775907e8a8\" y=\"12.0390625\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_15\">\n",
@@ -732,14 +732,14 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p480855d225\">\n",
+       "  <clipPath id=\"p7a57e79bc2\">\n",
        "   <rect height=\"223.2\" width=\"334.8\" x=\"25.9421875\" y=\"12.0390625\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
        "</svg>\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fad4bfff588>"
+       "<matplotlib.figure.Figure at 0x7f56b3e5dac8>"
       ]
      },
      "metadata": {},
@@ -756,6 +756,39 @@
     "tann=vectorize(tannan)\n",
     "x=arange(0,9*pi/2,pi/100)\n",
     "plot(x,tann(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.lib.function_base.vectorize"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.vectorize"
    ]
   },
   {
