--- a/physics/ryentropy.tex
+++ b/physics/ryentropy.tex
@@ -1,44 +1,60 @@
-\documentclass[12pt]{article}
+\documentclass[11pt, letters]{article}
 \usepackage{zpj}
 \title{Renyi entropy of the wormholes}
-\author{Peijun Zhu}
+\author{\zpj}
 \begin{document}
 \maketitle
-The (elementwise) positive matrix
-\begin{equation}
-T_{bc;\alpha}=\sum_ad_a^\alpha N_{ba}^c
-\end{equation}
-is normal as
+\newcommand{\suma}{\sum_{a_{1\to n}}}
+\newcommand{\sumx}{\sum_{x_{1\to n-1}}}
+\newcommand{\pd}{\prod_{i=1}^n d_{a_i}^\alpha}
+\newcommand{\numa}{\suma N_{a_1a_2\cdots a_n}\pd}
+\newcommand{\coresum}{\numa }
+
+R\'enyi entropy is defined as:
+\begin{align}
+	S_n(\alpha)&:=\frac{1}{1-\alpha}\log\left(\suma\sum_{\mu=1}^{N}\left(\frac{p_{a_1a_2\cdots a_n}}{N}\right)^\alpha\right) \\
+	&=\frac{1}{1-\alpha}\log\left(\frac{1}{\mathcal{D}^{2\alpha(n-1)}}\coresum \right) \\
+	&=\frac{1}{1-\alpha}\left[\log\left(\coresum\right)-\alpha(n-1)\log \mathcal{D}^2\right]\\
+	&=\frac{\alpha(n-1)\log \mathcal{D}^2-\log t_n(\alpha)}{\alpha-1}
+\end{align}
+We are using
+\begin{align}
+	t_n(\alpha)&:=\coresum\\
+	&= \suma\sumx N_{x_0a_1}^{x_1}N_{x_1a_2}^{x_2}\cdots N_{x_{n-1}a_n}^{x_n}\pd,\quad x_0=x_n=1\\
+	&= \sumx\prod_{i=1}^n\left(\suma d_{a_i}^\alpha N_{x_{i-1}a_i}^{x_i}\right)
+\end{align}
+Define \[T_{bc}(\alpha):=\sum_ad_a^\alpha N_{ba}^c\]
+Then \[t_n(\alpha)=\sumx\prod_{i=1}^nT_{x_{i-1}x_i}(\alpha)\left[\bm T^n(\alpha)\right]_{x_0x_n}=\left[\bm T^n(\alpha)\right]_{11}
+\label{t11}\]
+It's obvious that $T$ is an elementwise positive matrix. Moreover, $T$ is normal:
 \begin{align}\label{key}
 T_{ab}T_{cb}&=\sum_x\sum_y d_x^\alpha d_y^\alpha \sum_b N_{xa}^b N_{yc}^b\\
 &=\sum_x\sum_y d_x^\alpha d_y^\alpha \sum_b N_{x\bar b}^{\bar a} N_{y\bar b}^{\bar c}\\
 &=\sum_x\sum_y d_x^\alpha d_y^\alpha \sum_b  N_{\bar y b}^{c}N_{\bar xb}^{a}\\
 &=T_{ba}T_{bc}
 \end{align}
-Thus, The eigenvectors correspond to distinct eigenvalues must be orthogonal. Assume the eigenvalues and eigenvectors are $\{\lambda_i, \mathbf v_i\}$. The eigenvector $\mathbf v_m=d_i\mathbf e_i, v_m^2=\mathcal{D}^2$ with all components are positive has the max eigenvalue 
+Thus, the eigenvectors correspond to distinct eigenvalues must be orthogonal. Assume the eigenvalues and orthonormal eigenvectors are $\bm x_i$ with eigenvalue $\lambda_i(\alpha)$. The eigenvector $\bm x_m:=d_i\bm e_i/\mathcal{D}$ has the maximum eigenvalue because its all components are positive. The eigenvalue is
+\[\lambda_{\max}(\alpha)=\sum_a d_a^{\alpha+1}, \quad\lambda_{\max}(1)=\mathcal{D}^2\]
 
-\[A_\alpha=\lambda_{m;\alpha}=\sum_a d_a^{\alpha+1}\]
-In this notation, $\mathcal{D}^2=A_1$.
-\begin{equation}
-\mathbf e_1=\sum_i \frac{\mathbf e_1\cdot \mathbf v_i}{\mathbf v_i\cdot \mathbf v_i}\mathbf{v}_i=\sum_i c_i\mathbf v_i,\quad c_m=\frac{\mathbf e_1\cdot \mathbf v_m}{v_m^2}=d_1/\mathcal{D}^2=1/A_1
-\end{equation}
-Define
+We decompose $\bm e_1$ into $\bm x_i$ to calculate $[\bm{T}^n]_{11}$:
 \begin{align}
-B_\alpha&=(\mathbf{T}_\alpha^n)_{11}\\
-&=\mathbf{e}_1^T\mathbf{T}_\alpha^n \mathbf{e}_1\\
-&=\sum_i c_i^2v_i^2\lambda_i^n\\
-&=A_\alpha^n/A_1\left[1+\sum_{i\neq m}\frac{c_i^2v_i^2}{c_m^2v_m^2}\left( \frac{\lambda_i}{\lambda_m}\right) ^n\right]
+\bm e_1&=\sum_i c_i\bm x_i,\quad c_i=\bm e_1\cdot \bm x_i\\
+[\bm{T}_\alpha^n]_{11}&=\bm{e}_1^T\bm{T}_\alpha^n \bm{e}_1=\sum_i c_i^2\lambda_i^n\\
+&=c_m^2\lambda_{\max}^n\left[1+\sum_{i\neq m}\frac{c_i^2}{c_m^2}\left( \frac{\lambda_i}{\lambda_{\max}}\right) ^n\right]\\
+&=\frac{\lambda_{\max}^n}{\mathcal{D}^2}\left[1+\Theta(k^n)\right],\quad k:=\frac{\lambda_{\mathrm{sub}}}{\lambda_{\max}}<1
 \end{align}
-So, For $\alpha\in (0,+\infty)$, 
 \begin{align}
-S_{\alpha, n}&=\frac{\log B_\alpha-\alpha(n-1)\log \mathcal{D}^2}{1-\alpha}\\
-&=n\frac{\log A_\alpha-\alpha\log A_1}{1-\alpha}-\log A_1+O(k^n),\quad k<1\label{al}
-\end{align}
-Neglect the last term, we can verify from \ref{al} that 
-\begin{align}
-\lim_{\alpha\to 1}S_{\alpha, n}&=n\left(\log A_1-\sum_a\frac{d_a^2\log d_a}{A_1} \right) -\log A_1\\
-&=2(n-1)\log \mathcal{D}-n\sum_a p_a\log d_a
+S_n(\alpha)&=\frac{\alpha(n-1)\log \mathcal{D}^2-\log [\bm{T}_\alpha^n]_{11}}{\alpha-1}\\
+&=n\left[\frac{\alpha\log \lambda_{\max}(1)-\log \lambda_{\max}(\alpha)}{\alpha-1}\right]-\log \mathcal{D}^2+\Theta(k^n)\label{al}
 \end{align}
 
-In the $\alpha=1$ case, there is no other eigenvector with nonzero nonzero eigenvalue except $d_a$ because $T_{bc}=d_bd_c$. So there is no $O(k^n)$ term in \ref{al}.
+In the $\alpha=1$ case, there is no other nontrivial eigenvector except $\bm x_m$ because $\bm T=\bm x_m\bm x_m^\mathsf{T}$. So the $\Theta(k^n)$ term in \ref{al} reduce to zero.
+
+\begin{align}
+S_{n}(1)&=n\frac{\dd}{\dd\alpha}\Big|_{\alpha=1}\Big[\alpha\log \lambda_{\max}(1)-\log \lambda_{\max}(\alpha)\Big] -\log \mathcal{D}^2\\
+&=n\Big[\log \mathcal{D}^2-\sum_a \frac{d_a^2\log d_a}{\mathcal{D}^2}\Big]-\log \mathcal{D}^2\\
+&=(n-1)\log \mathcal{D}^2-n\sum_a p_a\log d_a
+\end{align}
+
+
 \end{document}
